test git commit desktop http clone

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 </head>
 <body>
+    <!-- комент для теста гит -->
     <div class="burger" id="burger">
         <a href="#">
             <img src="./img/hamburger_menu_icon.svg" alt="menu-icon">
