коммит для теста гит с ноутбука http

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <!-- комент для теста гит -->
+    <!-- еще один для гит с ноутбука -->
     <div class="burger" id="burger">
         <a href="#">
             <img src="./img/hamburger_menu_icon.svg" alt="menu-icon">
